# criu

./: .cirrus.yml  .clang-format  .codespellrc  .drone.yml  .gitignore  .lgtm.yml  .mailmap  .travis.yml  CONTRIBUTING.md  COPYING  COW_DUMP_DESIGN.md  CREDITS  Dockerfile  GEMINI.md  INSTALL.md  INTERNALS  MAINTAINERS  MAINTAINERS_GUIDE.md  Makefile  Makefile.compel  Makefile.config  Makefile.crtools  Makefile.inc  Makefile.install  Makefile.pie  Makefile.syscall  Makefile.versions  README  README.md  TODO  action-scripts.c  aio.c  bfd.c  bitmap.c  cgroup.c  cpu.c  cr-check.c  cr-dedup.c  cr-dump.c  cr-exec.c  (+93 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
Documentation/: .gitignore  HOWTO.cross-compile  Makefile  Makefile.build.txt  amdgpu_plugin.txt  compel.txt  crit.txt  criu-amdgpu-plugin.txt  criu-keygen.txt  criu-ns.txt  criu.txt  crtools.txt  custom.xsl  kfd_plugin.txt
compel/: .gitignore  Makefile  compel-host  handle-elf.c  main.c
contrib/: docker_cr.sh
coredump/: coredump  coredump-python2  coredump-python3  coredump.py  criu-coredump  pycriu
crit/: .gitignore  Makefile  crit  crit-python2  crit-python3  decoder.c  pyproject.toml  requirements.txt  setup.cfg  setup.py
crit/crit/: __main__.py
criu/: Makefile  Makefile.config  Makefile.crtools  Makefile.packages  Makefile.version  action-scripts.c  aio.c  apparmor.c  autofs.c  bfd.c  bitmap.c  bpf-util.c  bpfmap.c  cgroup-props.c  cgroup.c  clone-noasan.c  config.c  cow-dump.c  cr-check.c  cr-dedup.c  cr-dump.c  cr-errno.c  cr-exec.c  cr-libs.c  cr-restore.c  cr-service.c  cr-show.c  crtools.c  eventfd.c  eventpoll.c  external.c  fault-injection.c  fdstore.c  fifo.c  file-ids.c  file-lock.c  files-ext.c  files-reg.c  files-validation.c  files.c  (+91 more)
flog/: Makefile  built-in.S
images/: LICENSE  Makefile  autofs.proto  binfmt-misc.proto  bpfmap-data.proto  bpfmap-file.proto  cgroup.proto  cipher.proto  core-aarch64.proto  core-arm.proto  core-loongarch64.proto  core-mips.proto  core-ppc64.proto  core-riscv64.proto  core-s390.proto  core-x86.proto  core.proto  cpuinfo.proto  creds.proto  data-chunk.proto  eventfd.proto  eventpoll.proto  ext-file.proto  fdinfo.proto  (+61 more)
lib/: .gitignore  Makefile  criu.c  criu.h  criu.pc.in  pyproject.toml  setup.cfg
lib/c/: Makefile  criu.c  criu.h  criu.pc.in
lib/go/: .gitignore  Makefile
lib/go/src/criu/: main.go
lib/py/: .gitignore  Makefile  __init__.py  anonymize.py  cli.py  criu.py
lib/py/images/: Makefile  images.py  pb2dict.py
lib/pycriu/: .gitignore  Makefile  __init__.py  criu.py
lib/pycriu/images/: .gitignore  Makefile  __init__.py  images.py  pb2dict.py
(+2654 files in other folders)
