# Configuring setuptools using pyproject.toml files was introduced in setuptools 61.0.0
# https://setuptools.pypa.io/en/latest/history.html#v61-0-0
# For older versions of setuptools, we need to use the setup.cfg file
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#declarative-config

[metadata]
name = crit
description = CRiu Image Tool
author = CRIU team
author_email = criu@lists.linux.dev
license = GPLv2
version = attr: crit.__version__

[options]
packages = crit
python_requires = >=3.6

[options.entry_points]
console_scripts =
    crit = crit.__main__:main
