[build-system]
requires = ["setuptools", "protobuf<4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycriu"
description = "Python bindings for CRIU"
authors = [
    {name = "CRIU team", email = "criu@openvz.org"},
]
license = {text = "GPLv2"}
dynamic = ["version"]
requires-python = ">=3.6"

[tool.setuptools]
packages = ["pycriu", "pycriu.images"]

[tool.setuptools.dynamic]
version = {attr = "pycriu.__version__"}
