# Configuring setuptools using pyproject.toml files was introduced in setuptools 61.0.0
# https://setuptools.pypa.io/en/latest/history.html#v61-0-0
# For older versions of setuptools, we need to use the setup.cfg file
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#declarative-config

[metadata]
name = pycriu
description = Python bindings for CRIU
author = CRIU team
author_email = criu@openvz.org
license = GPLv2
version = attr: pycriu.__version__

[options]
packages = find:
python_requires = >=3.6
